# react-native-audio-analyzer

./: .gitignore  .gitmodules  AudioAnalyzer.podspec  CONTRIBUTING.md  LICENSE  README.md  Test.podspec  nitro.json  package.json  react-native-audio-analyzer.podspec  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/audioanalyzer/: AmplitudeData.java  AudioAnalyzerModule.java  AudioAnalyzerModule.kt  AudioAnalyzerPackage.java  AudioAnalyzerPackage.kt
android/src/main/java/com/margelo/nitro/analyzer/: TestPackage.kt
android/src/main/java/com/margelo/nitro/audioanalyzer/: AudioAnalyzerPackage.kt  FileSystem.kt
android/src/main/java/com/margelo/nitro/test/: Test.kt  TestPackage.kt
android/src/main/java/com/test/: TestPackage.kt
cpp/: AnalyzerRuntime.cpp  AnalyzerRuntime.h  AudioAnalyzer.cpp  AudioAnalyzer.h  AudioAnalyzer.hpp  HybridTest.cpp  HybridTest.hpp  Processor.cpp  Processor.hpp  react-native-audio-analyzer.cpp  react-native-audio-analyzer.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/AudioAnalyzerExample/: AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/AudioAnalyzerExample.xcodeproj/: project.pbxproj
example/ios/AudioAnalyzerExample.xcodeproj/xcshareddata/xcschemes/: AudioAnalyzerExample.xcscheme
example/ios/AudioAnalyzerExample.xcworkspace/: contents.xcworkspacedata
example/ios/AudioAnalyzerExampleTests/: AudioAnalyzerExampleTests.m
example/ios/TestExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TestExample.xcodeproj/: project.pbxproj
example/ios/TestExample.xcodeproj/xcshareddata/xcschemes/: TestExample.xcscheme
example/src/: App.tsx
ffmpeg/android/arm64-v8a/ffmpeg/include/: config.h
ffmpeg/android/arm64-v8a/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg/android/arm64-v8a/pkgconfig/: cpu-features.pc  zlib.pc
ffmpeg/android/armeabi-v7a/ffmpeg/include/: config.h
ffmpeg/android/armeabi-v7a/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg/android/armeabi-v7a/pkgconfig/: cpu-features.pc  zlib.pc
ffmpeg/android/x86/ffmpeg/include/: config.h
ffmpeg/android/x86/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg/android/x86/pkgconfig/: cpu-features.pc  zlib.pc
ffmpeg/android/x86_64/ffmpeg/include/: config.h
ffmpeg/android/x86_64/ffmpeg/include/libavutil/: file.h
ffmpeg/android/x86_64/pkgconfig/: cpu-features.pc  zlib.pc
ios/: AudioAnalyzer.h  AudioAnalyzer.mm  AudioAnalyzerModuleOnLoad.h  AudioAnalyzerModuleOnLoad.mm  FileSystem.swift  Test.swift
lib/commonjs/: helpers.js  helpers.js.map  index.js  index.js.map
lib/module/: helpers.js  helpers.js.map  index.js  index.js.map
lib/typescript/src/: helpers.d.ts  helpers.d.ts.map  index.d.ts  index.d.ts.map
scripts/: prepare_miniaudio.rb
src/: Analyzer.nitro.ts  AudioAnalyzer.nitro.ts  AudioAnalyzerBridge.ts  AudioAnalyzerModule.ts  AudioAnalyzerOnLoad.ts  FileSystem.nitro.ts  Processor.nitro.ts  Test.nitro.ts  helpers.test.ts  helpers.ts  index.ts  index.tsx
(+22 files in other folders)
